tests/testdata/errors/undefined_function.pine
// Test calling undefined function - should fail

var x = undefinedFunction(10)

// Expected error: Variable 'undefinedFunction' not found
